// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Option has class Option--active 1`] = `
<li
  className="Option Option--active "
>
  <button
    className="Option__action"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  />
</li>
`;

exports[`Option has class Option--active and content 1`] = `
<li
  className="Option Option--active "
>
  <button
    className="Option__action"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    64
  </button>
</li>
`;

exports[`Option has class Option--active and custom color 1`] = `
<li
  className="Option Option--active Option--color"
>
  <button
    className="Option__action"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#f8e7dc",
      }
    }
  />
</li>
`;

exports[`Option has class Option--inactive 1`] = `
<li
  className="Option Option--inactive "
>
  <button
    className="Option__action"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  />
</li>
`;

exports[`Option has class Option--inactive and content 1`] = `
<li
  className="Option Option--inactive "
>
  <button
    className="Option__action"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    64
  </button>
</li>
`;

exports[`Option has custom color 1`] = `
<li
  className="Option Option--inactive Option--color"
>
  <button
    className="Option__action"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#f8e7dc",
      }
    }
  />
</li>
`;
